k8s/wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: stack-wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /wordpress
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
